# 435Project

./: CMakeLists.txt  Report.md  build.sh  common.h  matmul.cpp  matmul.grace_job
DELIVERABLES/calipers/: 1024-cpu-linear-naive.cali  128-cpu-linear-naive-recur.cali  256-cpu-linear-naive-recur.cali  256-cpu-linear-naive.cali  256-cpu-linear-strassen.cali  512-cpu-linear-naive-recur.cali  cuda-naive-t1-v2048.cali  cuda-naive-t2-v4096.cali  cuda-naive-t8-v128.cali  cuda-naive-t8-v4096.cali  cuda-strass-t1-v1024.cali  cuda-strass-t16-v128.cali  cuda-strass-t16-v256.cali  cuda-strass-t2-v2048.cali  cuda-strass-t32-v4096.cali  cuda-strass-t4-v1024.cali  cuda-strass-t4-v4096.cali  cuda-strass-t4-v512.cali  cuda-strass-t8-v1024.cali  cuda-strass-t8-v128.cali  cuda-strass-t8-v2048.cali  cuda-strass-t8-v4096.cali  cuda-strass-t8-v512.cali
DELIVERABLES/jupyters/: comparison.ipynb  cuda_naive_caliper.ipynb  mpi.ipynb  mpi_naive_caliper.ipynb  sequential.ipynb
caliper/: 128-cpu-linear-naive.cali  128-cpu-linear-strass.cali  128-gpu-naive.cali  128-gpu-strassen.cali
cpu/: cpu_main.cpp  cpu_naive.h  cpu_stass.h  mpi_main.cpp  mpi_naive.h
cpu/mpi_naive/: CMakeLists.txt  mpi_naive.cpp  (+1 more)
cpu/mpi_strass/: CMakeLists.txt  mpi_strass.cpp  mpi_strass.grace_job  mpi_strass_temp.cpp  temp.cpp
cuBLAS/: cuBLAS.cu
cuda/: CMakeLists.txt  cuda.grace_job  cuda_main.cu  cuda_naive.h  cuda_strass.h
jupyter/: cuda.ipynb  cuda_naive-jupyter.ipynb  cuda_strass-jupyter.ipynb  cuda_strassen_caliper.ipynb  mpi.ipynb  mpi_naive-jupyter.ipynb  mpi_strass-jupyter.ipynb  mpi_strassen_caliper.ipynb  test.ipynb  testcompare.ipynb  testcuda.ipynb  testlinear.ipynb
linear/: CMakeLists.txt  lin_main.cpp  lin_matmul.grace_job  lin_naive.h  lin_naive_recur.h  lin_strass.h
(+545 files in other folders)
